# py-flask

./: .gitignore  pyproject.a.toml  pyproject.toml  readme.md
flaskr/: __init__.py  auth.py  blog.py  db.py  main.py  schema.sql
flaskr/routes/: blog.py
flaskr/static/: a.css
flaskr/templates/: base.html  index.html
flaskr/templates/auth/: login.html  registry.html
flaskr/templates/blog/: create.html  index.html  update.html
flaskr/utils/: error.py
instance/: flaskr.sqlite
